--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ eventlet==0.18.4
 Flask==0.10.1
 Flask-Script==2.0.5
 Flask-SocketIO==2.1
+Flask-SQLAlchemy==2.1
 greenlet==0.4.9
 itsdangerous==0.24
 Jinja2==2.8
@@ -9,5 +10,6 @@ MarkupSafe==0.23
 python-engineio==0.8.8
 python-socketio==1.0
 six==1.10.0
+SQLAlchemy==1.0.12
 Werkzeug==0.11.4
 wheel==0.24.0
